fix: scrollbar css

--- a/styles/components/Messenger.module.scss
+++ b/styles/components/Messenger.module.scss
@@ -28,6 +28,7 @@
     margin-bottom: 10px;
     border: none;
     transition: color 0.5s ease;
+    resize: none;
   }
   textarea:focus,
   input:focus {
