--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -94,3 +94,20 @@ textarea:focus,
 input:focus {
   outline: none;
 }
+
+textarea::-webkit-scrollbar {
+  width: 1em;
+}
+
+textarea::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px var(--selected-color);
+  -webkit-box-shadow: inset 0 0 6px var(--selected-color);
+  border-radius: 0px 2px 2px 0px;
+}
+
+textarea::-webkit-scrollbar-thumb {
+  background-color: var(--selected-color);
+  border-radius: 0px 2px 2px 0px;
+  box-shadow: 0 0 6px var(--selected-color);
+  -webkit-box-shadow: 0 0 6px var(--selected-color);
+}
